; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_gx_audio.c_gx_audio_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_gx_audio.c_gx_audio_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stop_audio = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @gx_audio_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gx_audio_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32*
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %14

9:                                                ; preds = %1
  store i32 1, i32* @stop_audio, align 4
  %10 = call i32 (...) @AIStopDMA()
  %11 = call i32 @AIRegisterDMACallback(i32* null)
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @free(i8* %12)
  br label %14

14:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @AIStopDMA(...) #1

declare dso_local i32 @AIRegisterDMACallback(i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
